# obs-plugin-detection

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  PROGRESS.md  README.md  README.zh-TW.md  control.cpp  control.h  detection_postprocess.hpp  detector.hpp  device.h  device_symbols.h  obs-detection-overlay.cpp  tracker.hpp
cmake/windows/: obs-module.rc.in
data/locale/: en-US.ini  zh-TW.ini
